# incident-ai

./: Dockerfile  README.md  agent.py  api.py  baseline.py  env.py  index.html  inference.py  main.py  metrics_stream.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_env.py
env/: incident_env.py
frontend/: dashboard.py  package-lock.json
frontend/src/: App.jsx
grader/: grader.py
server/: app.py
tasks/: easy_task.py  hard_task.py  medium_task.py
