[project]
name = "incident-ai-agent"
version = "0.1.0"
description = "AI Incident Resolver"
authors = [
    { name = "Prathamesh Lande" },
    { name = "Tapas Walde" },
    { name = "Sujal Dandhale" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"